--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,6 +10,12 @@
         android:id="@+id/profileHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <com.example.customview.profile_header.ProfileHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:profileAvatar="@tools:sample/avatars"
+        app:profileUserName="Static UserName" />
 
 </LinearLayout>
 
