--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:parentTag="android.widget.LinearLayout">
 
     <ImageView
         android:id="@+id/profileAvatar"
@@ -21,4 +22,4 @@
         android:layout_weight="1"
         tools:text="Sample Username" />
 
-</LinearLayout>
+</merge>
