--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,8 +13,8 @@
     <com.example.customview.profile_header.ProfileHeader
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:profileAvatar="@tools:sample/avatars"
-        app:profileUserName="Static UserName" />
+        tools:profileAvatar="@tools:sample/avatars"
+        tools:profileUserName="Static UserName" />
 
 </LinearLayout>
 
