--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,6 @@
         <attr name="profileAvatar" format="reference" />
         <attr name="profileUserName" format="string|reference" />
     </declare-styleable>
+
+    <attr name="profileStyle" format="reference" />
 </resources>
